# serialized-records

./: CHANGELOG.md  serialized-records.cabal
app/: Main.hs
docs/: Spec.md
src/Record/: Example.hs  TH.hs  Types.hs
src/Record/Example/: Address.hs  User.hs
