cabal-version:      3.0
name:               serialized-records
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Record.Types
                    , Record.Example
    default-extensions:
        MultiParamTypeClasses
        DataKinds
        FunctionalDependencies
        TypeApplications
        KindSignatures
        TypeSynonymInstances
        FlexibleInstances
        InstanceSigs
        FlexibleContexts
        UndecidableInstances
        CPP
    build-depends:    base
                    , streamly-core
    hs-source-dirs:   src
    default-language: Haskell2010
